--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -26,11 +26,13 @@
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
     "expo-constants": "~13.0.1",
+    "expo-firebase-analytics": "~6.0.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
+    "expo-updates": "~0.11.7",
     "expo-web-browser": "~10.1.0",
     "firebase": "^9.6.11",
     "react": "17.0.1",
@@ -44,8 +46,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-simple-dialogs": "^1.4.0",
     "react-native-web": "0.17.1",
-    "expo-image-picker": "~12.0.1",
-    "expo-firebase-analytics": "~6.0.0"
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "expo-secure-store": "~11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
