--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "login-signup-app",
-  "version": "0.83.1",
+  "version": "0.84.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -15,13 +15,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "7.1.3",
     "@react-native-firebase/app": "^14.8.0",
     "@react-native-firebase/auth": "^14.8.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
@@ -30,11 +33,16 @@
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linking": "~3.0.0",
+    "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
     "expo-web-browser": "~10.1.0",
+    "express": "^4.18.1",
     "firebase": "^9.6.11",
+    "lodash.range": "^3.2.0",
+    "pusher": "^5.1.0-beta",
+    "pusher-js": "^7.1.0-beta",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -42,17 +50,19 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.7.3",
+    "react-native-prompt": "^1.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-simple-dialogs": "^1.4.0",
+    "react-native-spinkit": "^1.5.1",
     "react-native-web": "0.17.1",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "expo-secure-store": "~11.1.0"
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/shortid": "0.0.29",
     "jest": "^26.6.3",
     "jest-expo": "^44.0.0",
     "react-test-renderer": "17.0.1",
