--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -46,6 +46,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animated-spinkit": "^1.5.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash.range": "^3.2.7",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/shortid": "0.0.29",
