--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -1,11 +1,10 @@
 {
   "name": "login-signup-app",
   "version": "0.84.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll"
@@ -14,10 +13,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "7.1.3",
+    "@react-native-community/netinfo": "8.2.0",
     "@react-native-firebase/app": "^14.8.0",
     "@react-native-firebase/auth": "^14.8.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -26,48 +25,49 @@
     "@react-navigation/stack": "^6.2.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
-    "expo": "~44.0.0",
-    "expo-asset": "~8.4.6",
-    "expo-constants": "~13.0.1",
-    "expo-firebase-analytics": "~6.0.0",
-    "expo-font": "~10.0.4",
-    "expo-image-picker": "~12.0.1",
-    "expo-linking": "~3.0.0",
-    "expo-secure-store": "~11.1.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
-    "expo-web-browser": "~10.1.0",
+    "expo": "^45.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-constants": "~13.1.1",
+    "expo-firebase-analytics": "~7.0.0",
+    "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-linking": "~3.1.0",
+    "expo-secure-store": "~11.2.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.1",
+    "expo-web-browser": "~10.2.0",
     "express": "^4.18.1",
     "firebase": "^9.6.11",
     "lodash.range": "^3.2.0",
+    "nanoid": "^3.3.4",
     "pusher": "^5.1.0-beta",
     "pusher-js": "^7.1.0-beta",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-animated-spinkit": "^1.5.2",
-    "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-elements": "4.0.0-rc.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.7.3",
     "react-native-prompt": "^1.0.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-simple-dialogs": "^1.4.0",
     "react-native-spinkit": "^1.5.1",
-    "react-native-web": "0.17.1",
+    "react-native-web": "0.17.7",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/lodash.range": "^3.2.7",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "~0.67.6",
     "@types/shortid": "0.0.29",
     "jest": "^26.6.3",
-    "jest-expo": "^44.0.0",
-    "react-test-renderer": "17.0.1",
+    "jest-expo": "^45.0.0",
+    "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
   "private": true
