--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "login-signup-app",
-  "version": "0.84.0",
+  "version": "0.9.0",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -47,6 +47,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animated-spinkit": "^1.5.2",
+    "react-native-clipboard": "^0.0.5",
     "react-native-elements": "4.0.0-rc.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^0.16.3",
