--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -48,6 +48,7 @@
     "react-native": "0.68.2",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-clipboard": "^0.0.5",
+    "react-native-dotenv": "^3.3.1",
     "react-native-elements": "4.0.0-rc.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^0.16.3",
