--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -36,7 +36,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.1",
-    "expo-web-browser": "~10.2.0",
+    "expo-web-browser": "~10.2.1",
     "express": "^4.18.1",
     "firebase": "^9.6.11",
     "lodash.range": "^3.2.0",
@@ -53,19 +53,21 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.7.3",
+    "react-native-paper": "^4.12.1",    
     "react-native-prompt": "^1.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-simple-dialogs": "^1.4.0",
     "react-native-spinkit": "^1.5.1",
     "react-native-web": "0.17.7",
+    "react-native-webview": "^11.18.2",    
     "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/lodash.range": "^3.2.7",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/react-native": "~0.67.6",  
     "@types/shortid": "0.0.29",
     "jest": "^26.6.3",
     "jest-expo": "^45.0.0",
