--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
+    "@types/react-native-dotenv": "^0.2.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "expo": "^45.0.0",
@@ -35,7 +36,7 @@
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.1",
+    "expo-updates": "~0.13.2",
     "expo-web-browser": "~10.2.1",
     "express": "^4.18.1",
     "firebase": "^9.6.11",
@@ -53,21 +54,21 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.7.3",
-    "react-native-paper": "^4.12.1",    
+    "react-native-paper": "^4.12.1",
     "react-native-prompt": "^1.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-simple-dialogs": "^1.4.0",
     "react-native-spinkit": "^1.5.1",
     "react-native-web": "0.17.7",
-    "react-native-webview": "^11.18.2",    
+    "react-native-webview": "11.18.1",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/lodash.range": "^3.2.7",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",  
+    "@types/react-native": "~0.67.6",
     "@types/shortid": "0.0.29",
     "jest": "^26.6.3",
     "jest-expo": "^45.0.0",
