--- a/login-signup-app/package.json
+++ b/login-signup-app/package.json
@@ -65,7 +65,7 @@
     "@babel/core": "^7.12.9",
     "@types/lodash.range": "^3.2.7",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/react-native": "^0.67.8",
     "@types/shortid": "0.0.29",
     "jest": "^26.6.3",
     "jest-expo": "^45.0.0",
