--- a/login-signup-app/tsconfig.json
+++ b/login-signup-app/tsconfig.json
@@ -2,7 +2,6 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "jsx": "react",
-    "strict": true,
-    "esModuleInterop": true
+    "strict": true    
   }
 }
